[gd_scene load_steps=17 format=3 uid="uid://cpbgad7xpvgim"]

[ext_resource type="Script" path="res://scripts/level_manager.gd" id="1_4xuiy"]
[ext_resource type="Script" path="res://scripts/Phase1Camera.gd" id="2_ox1v0"]
[ext_resource type="PackedScene" uid="uid://xfns54a7n5eb" path="res://particles/background_particles.tscn" id="3_nibl7"]
[ext_resource type="TileSet" uid="uid://brbpok4okhehv" path="res://map_resources/world_tile_set.tres" id="4_21v65"]
[ext_resource type="Script" path="res://scripts/tile_draw_controller.gd" id="5_sjyht"]
[ext_resource type="PackedScene" uid="uid://dfiwma3suklni" path="res://scenes/avaliable_shapes.tscn" id="6_v8vh2"]
[ext_resource type="PackedScene" uid="uid://bjyivq413uhna" path="res://scenes/avaliable_multipliers.tscn" id="7_43fkc"]
[ext_resource type="FontFile" uid="uid://bfjao6y3cc3i" path="res://assets/fonts/MotleyForcesRegular-w1rZ3.ttf" id="8_68d4j"]
[ext_resource type="Script" path="res://scripts/goal.gd" id="9_7sbxy"]
[ext_resource type="PackedScene" uid="uid://rvp1j1c6hjh" path="res://particles/arrow_indicator.tscn" id="10_yofs5"]
[ext_resource type="LabelSettings" uid="uid://w4vi2ub2x5dk" path="res://fonts/available_multiplier.tres" id="11_txtg7"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="12_qe5uf"]
[ext_resource type="Script" path="res://scripts/level_complete.gd" id="13_est46"]
[ext_resource type="PackedScene" uid="uid://hb3225in5b7u" path="res://particles/confetti_particles.tscn" id="14_pr2ic"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rk7v1"]
bg_color = Color(0, 0, 0, 0.658824)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ut35c"]

[node name="SampleWorld" type="Node2D"]
script = ExtResource("1_4xuiy")

[node name="Phase1Camera" type="Camera2D" parent="."]
position = Vector2(0, -262)
zoom = Vector2(0.7, 0.7)
script = ExtResource("2_ox1v0")

[node name="BackgroundParticles" parent="." instance=ExtResource("3_nibl7")]

[node name="TileParticles" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="." node_paths=PackedStringArray("shapes_control")]
tile_set = ExtResource("4_21v65")
format = 2
layer_0/name = "base_map"
layer_0/tile_data = PackedInt32Array(65533, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 65532, 0, 2, 65531, 0, 2, 65530, 0, 2, 65529, 0, 2, 65528, 0, 2, 65527, 0, 2, 65526, 0, 2, 65525, 0, 2, 65524, 0, 2, 65523, 0, 2, 3, 0, 2, 4, 0, 2, 5, 0, 2, 6, 0, 2, 7, 0, 2, 8, 0, 2, 9, 0, 2, 10, 0, 2, 11, 0, 2, 12, 0, 2, -589816, 0, 2, -589815, 0, 2, -589814, 0, 2, -589813, 0, 2, -8, 0, 2, -65544, 0, 2, -65543, 0, 2, -7, 0, 2, -196619, 0, 2, -327688, 0, 2, -327687, 0, 2, -458757, 0, 2, -458756, 0, 2, -458755, 0, 2, -393219, 0, 2, -327683, 0, 2, -524281, 0, 2, -65524, 0, 2, -131060, 0, 2, -196596, 0, 2, -262132, 0, 2, -327668, 0, 2, -393204, 0, 2, -458740, 0, 2, -524276, 0, 2, -589812, 0, 2, -655348, 0, 2, -720884, 0, 2, -786420, 0, 2, -720909, 0, 2, -655373, 0, 2, -589837, 0, 2, -524301, 0, 2, -458765, 0, 2, -393229, 0, 2, -327693, 0, 2, -262157, 0, 2, -196621, 0, 2, -131085, 0, 2, -65549, 0, 2, -13, 0, 2, -720908, 0, 2, -720907, 0, 2, -720906, 0, 2, -720905, 0, 2, -720904, 0, 2, -720903, 0, 2, -720902, 0, 2, -720901, 0, 2, -720900, 0, 2, -720899, 0, 2, -720898, 0, 2, -720897, 0, 2, -786432, 0, 2, -786431, 0, 2, -786430, 0, 2, -786429, 0, 2, -786428, 0, 2, -786427, 0, 2, -786426, 0, 2, -786425, 0, 2, -786424, 0, 2, -786423, 0, 2, -786422, 0, 2, -786421, 0, 2)
layer_1/name = "placed_tiles"
layer_2/name = "placement_tiles"
layer_2/modulate = Color(1, 1, 1, 0.466667)
script = ExtResource("5_sjyht")
shapes_control = NodePath("../UI/AvaliableShapes")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -95.0
offset_right = 1152.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_rk7v1")

[node name="AvaliableShapes" parent="UI" instance=ExtResource("6_v8vh2")]
offset_left = 18.0
offset_top = 554.0
offset_right = -22.0
offset_bottom = 514.0

[node name="AvaliableMultipliers" parent="UI" instance=ExtResource("7_43fkc")]
offset_left = 600.0
offset_top = 553.0
offset_right = 560.0
offset_bottom = 513.0

[node name="StartButton" type="Button" parent="UI"]
offset_left = 1064.0
offset_top = 557.0
offset_right = 1243.0
offset_bottom = 740.0
scale = Vector2(0.4, 0.4)
focus_mode = 0
theme_override_fonts/font = ExtResource("8_68d4j")
theme_override_font_sizes/font_size = 128
text = "Go
"

[node name="Goal" type="Area2D" parent="."]
position = Vector2(706, -592)
script = ExtResource("9_7sbxy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2(-1.625, -0.125)
shape = SubResource("RectangleShape2D_ut35c")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(-720, -61)

[node name="Indicators" type="Node2D" parent="."]

[node name="SpawnIndicator" parent="Indicators" instance=ExtResource("10_yofs5")]
position = Vector2(-723, -90)

[node name="GoalIndicator" parent="Indicators" instance=ExtResource("10_yofs5")]
position = Vector2(701, -675)

[node name="SpawnLabel" type="Label" parent="Indicators"]
offset_left = -766.0
offset_top = -125.0
offset_right = -130.0
offset_bottom = 79.0
scale = Vector2(0.15, 0.15)
text = "Start"
label_settings = ExtResource("11_txtg7")

[node name="GoalLabel" type="Label" parent="Indicators"]
offset_left = 659.0
offset_top = -698.0
offset_right = 1295.0
offset_bottom = -494.0
scale = Vector2(0.15, 0.15)
text = "Goal"
label_settings = ExtResource("11_txtg7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Retry" type="Button" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 344.0
offset_bottom = 183.0
grow_horizontal = 2
scale = Vector2(0.25, 0.25)
focus_mode = 0
theme_override_fonts/font = ExtResource("8_68d4j")
theme_override_font_sizes/font_size = 128
text = "RETRY"

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("12_qe5uf")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.151276, 0.151276, 0.151276, 0.662745)

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(150, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -136.0
offset_right = 323.0
offset_bottom = 264.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_68d4j")
theme_override_font_sizes/font_size = 128
text = "Resume"

[node name="Exit" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_68d4j")
theme_override_font_sizes/font_size = 128
text = "ExIT"

[node name="LevelComplete" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("13_est46")

[node name="ColorRect" type="ColorRect" parent="LevelComplete"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.151276, 0.151276, 0.151276, 0.662745)

[node name="Confetti" type="Node2D" parent="LevelComplete"]

[node name="ConfettiParticles" parent="LevelComplete/Confetti" instance=ExtResource("14_pr2ic")]
position = Vector2(150, 341)

[node name="ConfettiParticles2" parent="LevelComplete/Confetti" instance=ExtResource("14_pr2ic")]
position = Vector2(1008, 310)

[node name="ConfettiParticles3" parent="LevelComplete/Confetti" instance=ExtResource("14_pr2ic")]
position = Vector2(583, 596)

[node name="CenterContainer" type="CenterContainer" parent="LevelComplete"]
custom_minimum_size = Vector2(150, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -127.0
offset_right = 1136.0
offset_bottom = 398.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.4, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="LevelComplete/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelComplete/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(1400, 0)
layout_mode = 2
text = "Level Complete"
label_settings = ExtResource("11_txtg7")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Exit" type="Button" parent="LevelComplete/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_68d4j")
theme_override_font_sizes/font_size = 128
text = "NEXT LEVEL"

[connection signal="body_entered" from="Goal" to="Goal" method="_on_LevelCompleteTrigger_body_entered"]
